<resources>
    <string name="app_name">Student Tracker</string>
    <string name="activity_main_title">Home Screen</string>
    <string name="activity_term_title">Term List</string>
    <string name="activity_assessment_detail_title">Assessment Details</string>
    <string name="activity_assessment_add_title">Add Assessment</string>
    <string name="activity_assessment_edit_title">Edit Assessment</string>
    <string name="activity_course_detail_title">Course Details</string>
    <string name="activity_course_add_title">Add Course</string>
    <string name="activity_course_edit_title">Edit Course</string>
    <string name="activity_term_detail_title">Term Details</string>
    <string name="activity_term_add_title">Add Term</string>
    <string name="activity_term_edit_title">Edit Term</string>
    <string name="label_title">Title:</string>
    <string name="hint_enter_tile">Enter title</string>
    <string name="label_start_date">Start Date:</string>
    <string name="label_end_date">End Date:</string>

    <string name="term_list_item_start_date">Start: %1$s</string>
    <string name="term_list_item_end_date">End: %1$s</string>
    <string name="assessment_list_item_due_date"><b>Due Date:</b> %1$s</string>
    <string name="assessment_list_item_type">[ %1$s ]</string>
    <string name="assessment_type">%1$s Assessment</string>

    <string name="detail_dates">%1$s to %2$s</string>
    <string name="hint_enter_status">Enter a status</string>
    <string name="label_course_note">Course Notes </string>
    <string name="label_instructor">Instructor:</string>
    <string name="course_instructor_name">Name: %1$s</string>
    <string name="course_instructor_Number">Phone: %1$s</string>
    <string name="course_instructor_Email">Email: %1$s</string>
    <string name="hint_course_note">Enter course notes here</string>
    <string name="hint_instructor_name">Enter Instructor Name</string>
    <string name="hint_instructor_number">Enter Instructor Phone Number</string>
    <string name="hint_instructor_email">Enter Instructor Email</string>
    <string name="label_course_assessments">Assessments:</string>
    <string name="label_assessment_type">Type:</string>
    <string name="label_assessment_due_date">Due Date:</string>

    <string name="channel_name">Tracker Notifications</string>
    <string name="channel_description">Notification channel for the Student Tracker</string>
    <string name="desc_share_icon">share icon</string>
    <string name="activity_term_list_title">Term List</string>
    <string name="button_term_list">Term List</string>
    <string name="text_main_title">Welcome to Student Tracker</string>
    <string name="text_main_subtitle">Click on the term list button below to begin</string>

    <string-array name="assessment_type_array">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>
</resources>
