<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activityCourseDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.course.CourseDetailsActivity">

            <TextView
                android:id="@+id/textCourseDetailTitle"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:text="Title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textCourseDetailStatus"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:text="Status"
                app:layout_constraintTop_toBottomOf="@id/textCourseDetailTitle" />

            <TextView
                android:id="@+id/textCourseDetailDates"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:layout_marginBottom="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:text="01/01/2020 to 02/15/2020"
                app:layout_constraintTop_toBottomOf="@id/textCourseDetailStatus" />

            <TextView
                android:id="@+id/labelCourseDetailAssessments"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:text="@string/label_course_assessments"
                app:layout_constraintTop_toBottomOf="@id/textCourseDetailDates" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessmentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                app:layout_constraintTop_toBottomOf="@+id/labelCourseDetailAssessments"
                tools:listitem="@layout/assessment_list_item" />


            <LinearLayout
                android:id="@+id/linearCourseDetailNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:layout_marginStart="@dimen/large_padding"
                android:layout_marginEnd="@dimen/large_padding"
                android:paddingTop="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/assessmentRecyclerView">


                <TextView
                    android:id="@+id/labelCourseDetailNote"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/large_padding"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_course_note"/>

                <ImageButton
                    android:id="@+id/iconCourseDetailNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/desc_share_icon"
                    android:src="@drawable/ic_share" />

            </LinearLayout>

            <TextView
                android:id="@+id/textCourseDetailNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:layout_marginStart="@dimen/large_padding"
                android:layout_marginEnd="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:background="@color/cardview_dark_background"
                android:padding="@dimen/large_padding"
                app:layout_constraintTop_toBottomOf="@+id/linearCourseDetailNote"
                />

            <TextView
                android:id="@+id/labelCourseInstructor"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                android:gravity="center_horizontal"
                android:text="@string/label_instructor"
                app:layout_constraintTop_toBottomOf="@id/textCourseDetailNote" />

            <TextView
                android:id="@+id/textCourseInstructorName"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_padding"
                android:layout_marginTop="@dimen/large_padding"
                app:layout_constraintTop_toBottomOf="@id/labelCourseInstructor" />

            <TextView
                android:id="@+id/textCourseInstructorNumber"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_padding"
                android:layout_marginTop="@dimen/large_padding"
                app:layout_constraintTop_toBottomOf="@id/textCourseInstructorName" />

            <TextView
                android:id="@+id/textCourseInstructorEmail"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_padding"
                android:layout_marginTop="@dimen/large_padding"
                android:paddingBottom="@dimen/large_padding"
                app:layout_constraintTop_toBottomOf="@id/textCourseInstructorNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAssessmentAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/large_padding"
        android:src="@drawable/ic_add"
        app:maxImageSize="32dp" />

</RelativeLayout>
